0.27 Mon Jan  9 20:02:16 PST 2012
* Fix for TokyoCabinet
* Build updates for building on Ubuntu

0.26 Wed Nov 30 09:25:49 PST 2011
* Completed support for syslog for gearmand
* Fix libdrizzle issues
* Add API for killing a worker.

0.25 Thu Nov  3 09:18:46 PDT 2011
  * 1.0 libgearman API extracted.
  * Fix for long function names.
  * Fix for Worker consuming CPU by hanging.
  * TokyoCabinet build fix.
  * Fix for 32bit fix.

0.24 Sun Jul 24 20:57:02 PDT 2011
  * Minor bug fixes.
  * Updated test framework.
  * make fixes for Fedora.

0.23 Wed Jun 29 13:26:26 PDT 2011
  * Defined workers can now return GEARMAN_SHUTDOWN.
  * Benchmark worker can now be told to shutdown.
  * Allocator code has been cleaned up (gearman_allocator_t).
  * Added "workers" option to gearadmin
  * Workers will now default to -1 as timeout (lowers CPU on gearmand server for non-active workers).
  * SO_KEEPALIVE is now enabled on client/worker connections.
  * By default, workers now grab the unique value of the job.

0.22 Sun Jun 19 20:32:18 PDT 2011
  * Added gearman_work_map() for gearman_work_t describer.
  * gearman_execute_by_partition() added. 
  * gearamn_task_attr_t added.
  * Additional documentation update.
  * Issue with PHP client using automated task free (Thanks Taneli Leppä!!)
  * Fixed issue where PHP client's custom allocator was free'ing memory that did not belong to it.

0.21 Wed Jun 15 21:01:04 PDT 2011
  * Support for "drop function" in admin client
  * Fixed issue where server would not report on a bad unique value due to size
  * Forces do operations to complete no matter how the worker is designed.
  * Tasks inherit actions from client, and use them throughout execution.
  * Support for namespaces.
  * gearman_worker_define_function() has been added. It allows jobs to map out work to other workers and then aggregate the results.